# dotfiles

./: .bash_logout  .bash_profile  .bashrc  .editorconfig  .gitconfig  .gitignore  .gitignore_global  .gitmessage  .markdownlint-cli2.jsonc  .rumdl.toml  .textlintignore  .textlintrc.yml  .tmux.conf  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  dprint.json  install-wrapper.sh  install.sh  installer.sh  mise.toml  pnpm-lock.yaml  taplo.toml  todo.md  uninstall.sh  unlink.sh
.agent/workflows/: lint-markdown.md
.cursor/: .gitignore  argv.json  argv.json.template
.gemini/: styleguide.md
.github/: dependabot.yml
.github/workflows/: lint-yaml.yml  shellcheck.yml  update-version.yml  uv-qualify.yml
.ssh/: config  config.mac_only
agents/: .gitignore  README.md  mise.toml
agents/docs/: agent-team-consumer.md  agmsg-integration.md  apm-behavior-reference.md  beads-claude-guide.md  beads-codex-guide.md  drift-prevention-plan.md  instructions-primitive.md  migration-checklist.md  migration-plan.md  sync-guide.md
agents/tests/: test_inspect_apm_yml.py
automation/: README.md  auto_click.py  mise.toml  pyproject.toml
automation/automation/: auto_click.py  auto_click2.py  auto_click_ coordinates.py  auto_click_coordinates.py  click_map.json  click_map_builder.py  click_map_new.json  rel2.py  rel3.py  rela4.py  relative_clicker.py
bash/: .bash_profile  .bashenv  .bashrc  .gitignore  mise.toml
bash/envs/: .gitignore  00_secrets.sample.bash  01_select_env.sample.bash  02_sample_profile.bash  03_prof_b.bash  11_claude_envs.bash  README.md
bash/public/: 00_github_token.bash  00_github_token_mcp.bash  00_shellenv.bash  01_util.bash  02_bash.bash  02_system.bash  03_bash.bash  03_git.bash  04_prompt.bash  05_history.bash  05_prompt.bash  06_ssh-agent.bash  07_daily_runner.bash  07_ssh-agent.bash  11_alias.bash  12_git_alias.bash  13_gh_alias.bash  14_docker_alias.bash  15_aws.bash  19_load_env.bash  20_load_secrets.bash  21_cheat_sheet.bash  22_daily_runner.bash  31_asdf.bash  31_win_mac.bash  41_ltsv_to_json.bash  42_parse_json.bash  51_szip.bash  61_fzf.bash  99_monitor_aws.sh
brew/: README.md  mise.toml
chrome_extensions/: docs.md
chrome_extensions/media_control_shortcut/: background.js  docs.md  manifest.json
chrome_extensions/transparent_tab/: background.js  content.js  content2.js  manifest.json  manifest2.json  options.css  options.html  options.js  options1.js  options2.html  options2.js  options3.js  options4.js  popup.css  popup.html  popup.js  popup2.html  popup2.js  toggle.css
claude/: .gitignore  mise.toml  notify-claude-stop.sh  notify-stop.sh  notify_discord.sh  notify_slack.sh  notify_stop_windows.ps1  notify_stop_windows.sh  status_line.sh
claude/docs/: memory.md  (+9 more)
codex/: .gitignore  README.md  mise.toml  notify.sh
devcontainer-example/: README.md
discord-notify/: README.md  pyproject.toml
discord-notify/src/discord_notify/: __init__.py  webhook.py
discord-notify/tests/: test_webhook.py
docker/: index.md  mise.toml
docs/: git.txt  git_config.txt  home.txt  python.md
gemini/: README.md  mise.toml
gtts_sample/: .gitignore  README.md  main.py  mise.toml  pyproject.toml
mouse_emulator/: .gitignore  AGENTS.md  README.md  mise.toml  pyproject.toml  todo.md
mouse_emulator/docs/: README.md  auto_emulator.md  pause_toggle_troubleshooting.md
mouse_emulator/docs/auto_emulator/: cli.md  configuration.md  dodge.md  overview.md  produce_calibration.md  produce_rules.md  produce_usage.md
mouse_emulator/docs/examples/: auto_emulator_ocr.yml  auto_emulator_template.yml  basic_autorun.yml  mouse_profile_basic.json
mouse_emulator/docs/mouse_emulator/: overview.md  profiles.md
mouse_emulator/profiles/: default.json  right_default.json
mouse_emulator/profiles/auto_emulator/: dodge_sample.yml  dodge_shark.yml  example.yml  ocr_test.yml  sample1.yml  sample2.yml
mouse_emulator/profiles/mouse_emulator/: default.json  right_default.json
mouse_emulator/src/auto_emulator/: __init__.py  cli.py  exceptions.py
mouse_emulator/src/auto_emulator/actions/: __init__.py  base.py
mouse_emulator/src/auto_emulator/conditions/: __init__.py  evaluator.py
mouse_emulator/src/auto_emulator/config/: __init__.py  loader.py  models.py
mouse_emulator/src/auto_emulator/detectors/: __init__.py  base.py  ocr.py  template.py
mouse_emulator/src/auto_emulator/games/: __init__.py  dodge.py
mouse_emulator/src/auto_emulator/games/produce/: __init__.py  actions.py  cli.py  decision.py  digit_matcher.py  engine.py  reader.py  state.py  strategy.py  turn_log.py
mouse_emulator/src/auto_emulator/runtime/: __init__.py  context.py  engine.py  termination.py
mouse_emulator/src/auto_emulator/services/: __init__.py  capture.py
mouse_emulator/src/mouse_core/: __init__.py  calibration.py  canvas_refine.py  color_printer.py  display.py  loggers.py  pointer.py  region.py
mouse_emulator/src/mouse_emulator/: __init__.py  calibration.py  cli.py  color_printer.py  emulate.py  input_tracker.py  keys.py  profile.py  region.py  register.py
mouse_emulator/tests/: __init__.py  test_actions.py  test_auto_emulator_config.py  test_calibrate_produce_cli.py  test_canvas_refine.py  test_cli_helpers.py  test_cli_produce_run.py  test_conditions.py  test_config_loader.py  test_detectors.py  test_dodge.py  test_emulate_calibration.py  test_produce_decision.py  test_produce_dialog.py  test_produce_digit_matcher.py  test_produce_e2e.py  test_produce_engine.py  test_produce_regions_fixtures.py  test_produce_snapshots.py  test_produce_state_reader.py  test_produce_turn_log.py  test_region.py  test_runtime_engine.py  test_termination.py
mouse_emulator/tests/fixtures/produce/snapshots/: regions.json
mouse_emulator/tools/: __init__.py  calibrate_produce.py
repo-preset/: README.md
repo-sync/: pyproject.toml
repo-sync/src/repo_sync/: cli.py  sync.py
repo-sync/tests/: test_config.py
scoop/: README.md  mise.toml
security/: mise.toml
vscode-settings/: Makefile  README.md  config.json  mise.toml
winget/: .editorconfig  .gitignore  README.md  mise.toml
(+548 files in other folders)
