[project]
name = "repo-sync"
version = "0.1.0"
description = "Sync local git repositories with GitHub remotes"
requires-python = ">=3.12"
dependencies = [
    "discord-notify",
    "pyyaml>=6.0",
]

[tool.uv.sources]
discord-notify = { path = "../discord-notify", editable = true }

[project.scripts]
repo-sync = "repo_sync.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.11"]
